# bare-metal-game

./: Cargo.toml  README.md
src/: main.rs  pci.rs
src/pci/: headers.rs  io.rs  mod.rs
src/pci/audio_ac97/: mod.rs  music_loop.rs
src/phys_alloc/: mod.rs
src/spacefox/: mod.rs  music_data.rs
