[package]
name = "pluggable_interrupt_template"
version = "0.4.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.30"
pc-keyboard = "0.8.0"
pluggable_interrupt_os = "0.5.2"
x86_64 = "0.15.2"
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.num]
version = "0.4.0"
default-features = false

[dependencies.crossbeam]
version = "0.8"
default-features = false

[package.metadata.bootimage]
# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
# run-command = ["qemu-system-x86_64", "-device", "AC97", "-drive", "format=raw,file={}"]
# run-command = ["qemu-system-x86_64", "-audiodev", "pipewire,id=pipewire1", "-device", "AC97,audiodev=pipewire1", "-drive", "format=raw,file={}"]
run-command = ["qemu-system-x86_64", "-audiodev", "alsa,id=pipewire1", "-device", "AC97,audiodev=pipewire1", "-drive", "format=raw,file={}"]
